fix lc data scroller overlap

--- a/src/css/section/workflow/workflow.less
+++ b/src/css/section/workflow/workflow.less
@@ -263,6 +263,8 @@
 .lc-card {
   .lc-data-wrapper {
     //border-bottom: 1px solid @color-grey-d;
+    padding: 0px 0px 18px;
+    margin: 0px 0px -11px;
     white-space: nowrap;
     list-style: none;
     overflow: auto;
